# rigid-body-simulation

./: CMakeLists.txt  README.md
build-vscode/: .ninja_deps  .ninja_log  ALL_BUILD.vcxproj  CMakeCache.txt  Paint.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.ninja  cmake_install.cmake  compile_commands.json  rules.ninja
build-vscode/.cmake/api/v1/reply/: cache-v2-cc04ddb90000837e9e47.json  codemodel-v2-2c3f6b597c9d05d6b030.json  index-2020-06-22T09-54-05-0065.json  target-ALL_BUILD-Release-b68dffc00745d20f09c3.json  target-Paint-Debug-0dbbe8ec3e09ea57aecf.json  target-Paint-MinSizeRel-e27b7a787bf8cd07f1b2.json  target-Paint-RelWithDebInfo-5eb4dd7aabac4b7faa0d.json  target-Paint-Release-b11bfcdcbec631c587a3.json  target-ZERO_CHECK-Debug-53a93daa8853db4a1dc2.json
build-vscode/src/: Paint.ilk  Paint.vcxproj  Paint.vcxproj.filters  cmake_install.cmake
build-vscode/src/Debug/: Paint.ilk
build-vscode/src/Paint.dir/Debug/Paint.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  Paint.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build-vscode/win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/: .Ball.hpp.swp  .CMakeLists.txt.swp  .Entity.hpp.swp  .Main.cpp.swp  .Paddle.hpp.swp  Ball.hpp  CMakeLists.txt  Camera.hpp  CoordinateTransformer.hpp  Drawable.hpp  Entity.hpp  Main.cpp  Math.hpp  Paddle.hpp  Paint.cpp  Rasterize.hpp  Screen.cpp  Screen.hpp  Shape.hpp  Vertex.hpp
(+3 files in other folders)
